-- 001_initial_schema.sql

-- ==========================================
-- TABLE: OPERATORS
-- ==========================================
CREATE TABLE OPERATORS (
    OPR_ID VARCHAR2(20) NOT NULL,
    OPR_EMAIL VARCHAR2(255) NOT NULL,
    OPR_NAME VARCHAR2(32) NOT NULL,
    OPR_STATUS VARCHAR2(20) NOT NULL,
    CREATED_AT TIMESTAMP NOT NULL,
    LAST_ACTIVITY TIMESTAMP NOT NULL,
    CONSTRAINT PK_OPERATORS PRIMARY KEY (OPR_ID),
    CONSTRAINT UQ_OPERATORS_EMAIL UNIQUE (OPR_EMAIL),
    CONSTRAINT UQ_OPERATORS_NAME UNIQUE (OPR_NAME),
    CONSTRAINT CHK_OPR_STATUS CHECK (OPR_STATUS IN ('online', 'offline'))
);

-- ==========================================
-- TABLE: ACTORS
-- ==========================================
CREATE TABLE ACTORS (
    ACT_ID VARCHAR2(20) NOT NULL,
    ACT_USERNAME VARCHAR2(32) NOT NULL,
    OPR_ID VARCHAR2(20) NOT NULL,
    ACT_STATUS VARCHAR2(50) NOT NULL,
    CREATED_AT TIMESTAMP NOT NULL,
    LAST_ACTIVITY TIMESTAMP NOT NULL,
    CONSTRAINT PK_ACTORS PRIMARY KEY (ACT_ID),
    CONSTRAINT FK_ACTORS_OPR FOREIGN KEY (OPR_ID) REFERENCES OPERATORS(OPR_ID),
    CONSTRAINT CHK_ACT_STATUS CHECK (ACT_STATUS IN ('Active', 'Suspended By Team', 'Suspended By Insta', 'Discarded'))
);

-- ==========================================
-- TABLE: TARGETS
-- ==========================================
CREATE TABLE TARGETS (
    TAR_ID VARCHAR2(20) NOT NULL,
    TAR_USERNAME VARCHAR2(32) NOT NULL,
    TAR_STATUS VARCHAR2(50) NOT NULL,
    FIRST_CONTACTED TIMESTAMP NOT NULL,
    NOTES CLOB DEFAULT 'N/A' NOT NULL,
    LAST_UPDATED TIMESTAMP NOT NULL,
    EMAIL VARCHAR2(500) DEFAULT 'N/S' NOT NULL,
    PHONE_NUM VARCHAR2(500) DEFAULT 'N/S' NOT NULL,
    CONT_SOURCE CLOB DEFAULT 'N/S' NOT NULL,
    CONSTRAINT PK_TARGETS PRIMARY KEY (TAR_ID),
    CONSTRAINT UQ_TARGETS_USERNAME UNIQUE (TAR_USERNAME),
    CONSTRAINT CHK_TAR_STATUS CHECK (TAR_STATUS IN ('Cold No Reply', 'Replied', 'Warm', 'Booked', 'Paid', 'Tableturnerr Client', 'Excluded'))
);

-- ==========================================
-- TABLE: EVENT_LOGS
-- ==========================================
CREATE TABLE EVENT_LOGS (
    ELG_ID VARCHAR2(20) NOT NULL,
    EVENT_TYPE VARCHAR2(50) NOT NULL,
    ACT_ID VARCHAR2(20) NOT NULL,
    OPR_ID VARCHAR2(20) NOT NULL,
    TAR_ID VARCHAR2(20) NOT NULL,
    DETAILS CLOB,
    CREATED_AT TIMESTAMP NOT NULL,
    CONSTRAINT PK_EVENT_LOGS PRIMARY KEY (ELG_ID),
    CONSTRAINT FK_ELG_ACT FOREIGN KEY (ACT_ID) REFERENCES ACTORS(ACT_ID),
    CONSTRAINT FK_ELG_OPR FOREIGN KEY (OPR_ID) REFERENCES OPERATORS(OPR_ID),
    CONSTRAINT FK_ELG_TAR FOREIGN KEY (TAR_ID) REFERENCES TARGETS(TAR_ID),
    CONSTRAINT CHK_ELG_TYPE CHECK (EVENT_TYPE IN ('New Tar Register', 'Change in Tar Info', 'Tar Exception Toggle', 'Outreach'))
);

-- ==========================================
-- TABLE: OUTREACH_LOGS
-- ==========================================
CREATE TABLE OUTREACH_LOGS (
    OLG_ID VARCHAR2(20) NOT NULL,
    ELG_ID VARCHAR2(20) NOT NULL,
    MESSAGE_TEXT CLOB NOT NULL,
    SENT_AT TIMESTAMP NOT NULL,
    CONSTRAINT PK_OUTREACH_LOGS PRIMARY KEY (OLG_ID),
    CONSTRAINT UQ_OLG_ELG UNIQUE (ELG_ID),
    CONSTRAINT FK_OLG_ELG FOREIGN KEY (ELG_ID) REFERENCES EVENT_LOGS(ELG_ID)
);

-- ==========================================
-- TABLE: GOALS
-- ==========================================
CREATE TABLE GOALS (
    GOAL_ID VARCHAR2(20) NOT NULL,
    METRIC VARCHAR2(50) NOT NULL,
    TARGET_VALUE INTEGER NOT NULL,
    FREQUENCY VARCHAR2(20) NOT NULL,
    ASSIGNED_TO_OPR VARCHAR2(20),
    ASSIGNED_TO_ACT VARCHAR2(20),
    STATUS VARCHAR2(20) DEFAULT 'Active' NOT NULL,
    SUGGESTED_BY VARCHAR2(20),
    CREATED_AT TIMESTAMP NOT NULL,
    START_DATE TIMESTAMP NOT NULL,
    END_DATE TIMESTAMP,
    CONSTRAINT PK_GOALS PRIMARY KEY (GOAL_ID),
    CONSTRAINT FK_GOALS_OPR FOREIGN KEY (ASSIGNED_TO_OPR) REFERENCES OPERATORS(OPR_ID),
    CONSTRAINT FK_GOALS_ACT FOREIGN KEY (ASSIGNED_TO_ACT) REFERENCES ACTORS(ACT_ID),
    CONSTRAINT FK_GOALS_SUGGESTED FOREIGN KEY (SUGGESTED_BY) REFERENCES OPERATORS(OPR_ID),
    CONSTRAINT CHK_GOAL_METRIC CHECK (METRIC IN ('Total Messages Sent', 'Unique Profiles Contacted', 'Replies Received', 'Warm Leads Generated', 'Bookings Made', 'Payments Received')),
    CONSTRAINT CHK_GOAL_FREQ CHECK (FREQUENCY IN ('Daily', 'Monthly')),
    CONSTRAINT CHK_GOAL_STATUS CHECK (STATUS IN ('Active', 'Pending Suggestion', 'Rejected', 'Archived'))
);

-- ==========================================
-- TABLE: RULES
-- ==========================================
CREATE TABLE RULES (
    RULE_ID VARCHAR2(20) NOT NULL,
    TYPE VARCHAR2(50) NOT NULL,
    METRIC VARCHAR2(50) NOT NULL,
    LIMIT_VALUE INTEGER NOT NULL,
    TIME_WINDOW_SEC INTEGER NOT NULL,
    SEVERITY VARCHAR2(50) DEFAULT 'Soft Warning',
    ASSIGNED_TO_OPR VARCHAR2(20),
    ASSIGNED_TO_ACT VARCHAR2(20),
    STATUS VARCHAR2(20) DEFAULT 'Active' NOT NULL,
    SUGGESTED_BY VARCHAR2(20),
    CREATED_AT TIMESTAMP NOT NULL,
    CONSTRAINT PK_RULES PRIMARY KEY (RULE_ID),
    CONSTRAINT FK_RULES_OPR FOREIGN KEY (ASSIGNED_TO_OPR) REFERENCES OPERATORS(OPR_ID),
    CONSTRAINT FK_RULES_ACT FOREIGN KEY (ASSIGNED_TO_ACT) REFERENCES ACTORS(ACT_ID),
    CONSTRAINT FK_RULES_SUGGESTED FOREIGN KEY (SUGGESTED_BY) REFERENCES OPERATORS(OPR_ID),
    CONSTRAINT CHK_RULE_TYPE CHECK (TYPE IN ('Frequency Cap', 'Interval Spacing')),
    CONSTRAINT CHK_RULE_METRIC CHECK (METRIC IN ('Total Messages Sent', 'Unique Profiles Contacted', 'Replies Received', 'Warm Leads Generated', 'Bookings Made', 'Payments Received')),
    CONSTRAINT CHK_RULE_STATUS CHECK (STATUS IN ('Active', 'Pending Suggestion', 'Rejected', 'Archived'))
);
